# computacion-2025-backgammon-Veraagustin0328

./: .coveragerc  .gitignore  .pylintrc  CHANGELOG.md  JUSTIFICACION.md  README.md  prompts-desarrollo.md  prompts-documentacion.md  prompts-testing.md  pyproject.bad.txt  pyproject.toml  pyproject.toml.bak  pytest.ini  requirements.txt
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml  task.yml
.github/workflows/: ci.yml
backgammon/backgammon/cli/: __main__.py
backgammon/backgammon/core/: board.py  checker.py  dice.py  game.py  player.py
backgammon/cli/: __init__.py  __main__.py
backgammon/core/: __init__.py  board.py  board_refactored.py  dice.py  game.py  game_refactored.py  player.py  player_refactored.py
backgammon/pygame_ui/: main.py
backgammon/tests/: conftest.py  test_CLI.py  test_board.py  test_board_refactored.py  test_checker.py  test_dice.py  test_game.py  test_game_refactored.py  test_placeholder.py  test_player.py  test_player_refactored.py
docs/: roadmap-sprint1.md  testing-strategy.md
tests/: test_dice.py
