[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "backgammon"
version = "0.0.1"
requires-python = ">=3.10"
description = "Proyecto Backgammon Computacion 2025"
readme = "README.md"
authors = [{ name = "Agustin Vera" }]
dependencies = []

[project.scripts]
backgammon = "backgammon.backgammon.cli.__main__:main"

[tool.pytest.ini_options]
addopts = "-q --cov=backgammon --cov-report=term-missing"
testpaths = ["backgammon/tests"]
pythonpath = ["."]


